--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -42,7 +42,7 @@ global:
     enabled: true
     name: n2network
     type: ipvlan
-    masterIf: eth0
+    masterIf: enp0s8
     subnetIP: 10.100.50.248
     cidr: 29
     gatewayIP: 10.100.50.254
