--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -24,7 +24,7 @@ global:
     enabled: true
     name: n4network
     type: ipvlan
-    masterIf: eth0
+    masterIf: enp0s8
     subnetIP: 10.100.50.240
     cidr: 29
     gatewayIP: 10.100.50.246
@@ -33,7 +33,7 @@ global:
     enabled: true
     name: n3network
     type: ipvlan
-    masterIf: eth0
+    masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
     gatewayIP: 10.100.50.238
@@ -42,16 +42,16 @@ global:
     enabled: true
     name: n6network
     type: ipvlan
-    masterIf: eth1
-    subnetIP: 10.100.100.0
+    masterIf: enp0s3
+    subnetIP: 10.0.2.15
     cidr: 24
-    gatewayIP: 10.100.100.1
-    excludeIP: 10.100.100.254
+    gatewayIP: 10.0.2.15
+    excludeIP: 10.0.2.254
   n9network:
     enabled: true
     name: n9network
     type: ipvlan
-    masterIf: eth0
+    masterIf: enp0s8
     subnetIP: 10.100.50.224
     cidr: 29
     gatewayIP: 10.100.50.230
@@ -76,7 +76,7 @@ upf:
   n4if:  # PFCP
     ipAddress: 10.100.50.241
   n6if:  # DN
-    ipAddress: 10.100.100.12
+    ipAddress: 10.0.2.15
 
   podAnnotations: {}
     # additional annotations
