--- a/charts/free5gc/charts/free5gc-nssf/values.yaml
+++ b/charts/free5gc/charts/free5gc-nssf/values.yaml
@@ -41,7 +41,7 @@ nssf:
   name: nssf
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-nssf
+    name: danilogranadosg/free5gc-nssf
     pullPolicy: Always
   service:
     type: ClusterIP
