--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -63,7 +63,7 @@ amf:
   name: amf
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-amf
+    name: danilogranadosg/free5gc-amf
     pullPolicy: Always
   service:
     type: ClusterIP
