--- a/charts/free5gc/charts/free5gc-ausf/values.yaml
+++ b/charts/free5gc/charts/free5gc-ausf/values.yaml
@@ -41,7 +41,7 @@ ausf:
   name: ausf
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-ausf
+    name: danilogranadosg/free5gc-ausf
     pullPolicy: Always
   service:
     type: ClusterIP
