--- a/charts/free5gc/charts/free5gc-smf/values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/values.yaml
@@ -56,7 +56,7 @@ smf:
   name: smf
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-smf
+    name: danilogranadosg/free5gc-smf
     pullPolicy: Always
   service:
     type: ClusterIP
