--- a/charts/free5gc/charts/free5gc-udm/values.yaml
+++ b/charts/free5gc/charts/free5gc-udm/values.yaml
@@ -41,7 +41,7 @@ udm:
   name: udm
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-udm
+    name: danilogranadosg/free5gc-udm
     pullPolicy: Always
   service:
     type: ClusterIP
