--- a/charts/free5gc/charts/free5gc-udr/values.yaml
+++ b/charts/free5gc/charts/free5gc-udr/values.yaml
@@ -51,7 +51,7 @@ udr:
   name: udr
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-udr
+    name: danilogranadosg/free5gc-udr
     pullPolicy: Always
   service:
     type: ClusterIP
