--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -61,7 +61,7 @@ upf:
   name: upf
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-upf
+    name: danilogranadosg/free5gc-upf
     pullPolicy: Always
   configmap:
     wrapperAdditionalCommands: ""
