--- a/charts/free5gc/charts/free5gc-dbpython/values.yaml
+++ b/charts/free5gc/charts/free5gc-dbpython/values.yaml
@@ -22,10 +22,11 @@ global:
 
 initcontainers:
   curl:
-    registry: towards5gs
+    registry: danilogranadosg
     image: initcurl
     tag: "1.0.0"
   busybox:
+    registry: danilogranadosg
     image: busybox
     tag: "1.32.0"
 
