--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -126,7 +126,7 @@ upf1:
   name: upf1
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-upf
+    name: danilogranadosg/free5gc-upf
     pullPolicy: Always
   configmap:
     wrapperAdditionalCommands: ""
@@ -190,7 +190,7 @@ upf2:
   name: upf2
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-upf
+    name: danilogranadosg/free5gc-upf
     pullPolicy: Always
   configmap:
     wrapperAdditionalCommands: ""
@@ -254,7 +254,7 @@ upfb:
   name: upfb
   replicaCount: 1
   image:
-    name: towards5gs/free5gc-upf
+    name: danilogranadosg/free5gc-upf
     pullPolicy: Always
   configmap:
     wrapperAdditionalCommands: ""
