--- a/kube-fledged/smf.yaml
+++ b/kube-fledged/smf.yaml
@@ -2,7 +2,7 @@ apiVersion: kubefledged.io/v1alpha2
 kind: ImageCache
 metadata:
   # Name of the image cache. A cluster can have multiple image cache objects
-  name: free5gc
+  name: smf
   namespace: free5gc
   # The kubernetes namespace to be used for this image cache. You can choose a different namepace as per your preference
   labels:
@@ -13,23 +13,9 @@ spec:
   cacheSpec:
   # Specifies a list of images (nginx:1.23.1) with no node selector, hence these images will be cached in all the nodes in the cluster
   - images:
-    - docker.io/danilogranadosg/free5gc-nssf
-    - docker.io/danilogranadosg/free5gc-nrf
-    - docker.io/danilogranadosg/free5gc-pcf
     - docker.io/danilogranadosg/free5gc-smf
-    - docker.io/danilogranadosg/free5gc-udm
-    - docker.io/danilogranadosg/free5gc-udr
-    - docker.io/danilogranadosg/free5gc-upf
-    - docker.io/danilogranadosg/free5gc-webui
-    - docker.io/danilogranadosg/busybox:1.32.0
-    - docker.io/danilogranadosg/initcurl:1.0.0
-    - docker.io/bitnami/mongodb:4.4.4-debian-10-r0
-    - docker.io/bitnami/nginx:1.19.6-debian-10-r51
-    - docker.io/bitnami/kubectl:1.18.15-debian-10-r24
-    - docker.io/bitnami/minideb:buster
-    - docker.io/bitnami/mongodb-exporter:0.11.2-debian-10-r79
+
   # Specifies a list of images (cassandra:v7 and etcd:3.5.4-0) with a node selector, hence these images will be cached only on the nodes selected by the node selector
 
   # Specifies a list of image pull secrets to pull images from private repositories into the cache
-  imagePullSecrets:
-  - name: free5gcsecret
+
