change image pull policy

--- a/charts/free5gc/charts/free5gc-dbpython/values.yaml
+++ b/charts/free5gc/charts/free5gc-dbpython/values.yaml
@@ -43,7 +43,7 @@ dbpython:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-dbpython
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   podAnnotations: {}
     # additional annotations
   imagePullSecrets: []
