--- a/charts/free5gc/charts/free5gc-udm/values.yaml
+++ b/charts/free5gc/charts/free5gc-udm/values.yaml
@@ -43,7 +43,7 @@ udm:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-udm
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     type: ClusterIP
     port: 80
