--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -62,7 +62,7 @@ upf:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-upf
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   configmap:
     wrapperAdditionalCommands: ""
     # wrapperAdditionalCommands: |
