--- a/charts/free5gc/charts/free5gc-webui/values.yaml
+++ b/charts/free5gc/charts/free5gc-webui/values.yaml
@@ -53,7 +53,7 @@ webui:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-webui
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     name: webui-service
     type: NodePort
