--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -65,7 +65,7 @@ amf:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-amf
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     type: ClusterIP
     port: 80
