--- a/charts/free5gc/charts/free5gc-nrf/values.yaml
+++ b/charts/free5gc/charts/free5gc-nrf/values.yaml
@@ -60,7 +60,7 @@ nrf:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-nrf
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   volume:
     mount: /free5gc/config/
   podAnnotations: {}
