--- a/charts/free5gc/charts/free5gc-pcf/values.yaml
+++ b/charts/free5gc/charts/free5gc-pcf/values.yaml
@@ -51,7 +51,7 @@ pcf:
   replicaCount: 1
   image:
     name: danilogranadosg/free5gc-pcf
-    pullPolicy: Always
+    pullPolicy: IfNotPresent
   service:
     type: ClusterIP
     port: 80
