amf initcontainers pullpolicy included

--- a/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
+++ b/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
@@ -54,6 +54,7 @@ spec:
       - name: wait-nrf
         {{- with $.Values.initcontainers.curl }}
         image: {{ .registry }}/{{ .image }}:{{ .tag }}
+        imagePullPolicy: {{ .image.pullPolicy }}
         {{- end }}
         env:
         - name: DEPENDENCIES
