--- a/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
+++ b/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
@@ -53,8 +53,7 @@ spec:
       initContainers:
       - name: wait-nrf
         {{- with $.Values.initcontainers.curl }}
-        image: {{ .registry }}/{{ .image }}:{{ .tag }}
-        imagePullPolicy: {{ .image.pullPolicy }}
+        image: {{ .registry }}/{{ .image }}:{{ .tag }}/{{ .image.pullPolicy }}
         {{- end }}
         env:
         - name: DEPENDENCIES
