--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -53,12 +53,12 @@ initcontainers:
     registry: danilogranadosg
     image: initcurl
     tag: "1.0.0"
-    pullPolicy: IfNotPresent
+    imagePullPolicy: IfNotPresent
   busybox:
     registry: danilogranadosg
     image: busybox
     tag: "1.32.0"
-    pullPolicy: IfNotPresent
+    imagePullPolicy: IfNotPresent
 
 isNgapNeeded: true
 
