even more changes to pull policy

--- a/charts/free5gc/charts/free5gc-nrf/templates/nrf-deployment.yaml
+++ b/charts/free5gc/charts/free5gc-nrf/templates/nrf-deployment.yaml
@@ -45,7 +45,7 @@ spec:
       initContainers:
       - name: wait-mongo
         {{- with $.Values.initcontainers.busybox }}
-        image: {{ .image }}:{{ .tag }}
+        image: {{ .registry }}/{{ .image }}:{{ .tag }}/{{ .imagePullPolicy }}
         {{- end }}
         env:
         - name: DEPENDENCIES
