--- a/charts/free5gc/charts/free5gc-webui/values.yaml
+++ b/charts/free5gc/charts/free5gc-webui/values.yaml
@@ -33,10 +33,12 @@ initcontainers:
     registry: danilogranadosg
     image: initcurl
     tag: "1.0.0"
+    imagePullPolicy: IfNotPresent
   busybox:
     registry: danilogranadosg
     image: busybox
     tag: "1.32.0"
+    imagePullPolicy: IfNotPresent
 
 db:
   enabled: false
