And yet, even more changes

--- a/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
+++ b/charts/free5gc/charts/free5gc-amf/templates/amf-deployment.yaml
@@ -53,7 +53,8 @@ spec:
       initContainers:
       - name: wait-nrf
         {{- with $.Values.initcontainers.curl }}
-        image: {{ .registry }}/{{ .image }}:{{ .tag }}/{{ .imagePullPolicy }}
+        image: {{ .registry }}/{{ .image }}:{{ .tag }}
+        imagePullPolicy: {{ .imagePullPolicy }}
         {{- end }}
         env:
         - name: DEPENDENCIES
