Change to local docker registry

--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -50,12 +50,12 @@ global:
 
 initcontainers:
   curl:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: initcurl
     tag: "1.0.0"
     imagePullPolicy: IfNotPresent
   busybox:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: busybox
     tag: "1.32.0"
     imagePullPolicy: IfNotPresent
@@ -66,7 +66,7 @@ amf:
   name: amf
   replicaCount: 1
   image:
-    name: danilogranadosg/free5gc-amf
+    name: 172.23.23.222:5000/free5gc-amf
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
