--- a/charts/free5gc/charts/free5gc-dbpython/values.yaml
+++ b/charts/free5gc/charts/free5gc-dbpython/values.yaml
@@ -22,11 +22,11 @@ global:
 
 initcontainers:
   curl:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: initcurl
     tag: "1.0.0"
   busybox:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: busybox
     tag: "1.32.0"
 
@@ -42,7 +42,7 @@ dbpython:
   name: dbpython
   replicaCount: 1
   image:
-    name: danilogranadosg/free5gc-dbpython
+    name: 172.23.23.222:5000/free5gc-dbpython
     pullPolicy: IfNotPresent
   podAnnotations: {}
     # additional annotations
