--- a/charts/free5gc/charts/free5gc-udr/values.yaml
+++ b/charts/free5gc/charts/free5gc-udr/values.yaml
@@ -30,11 +30,11 @@ global:
 
 initcontainers:
   curl:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: initcurl
     tag: "1.0.0"
   busybox:
-    registry: danilogranadosg
+    registry: 172.23.23.222:5000
     image: busybox
     tag: "1.32.0"
 
@@ -52,7 +52,7 @@ udr:
   name: udr
   replicaCount: 1
   image:
-    name: danilogranadosg/free5gc-udr
+    name: 172.23.23.222:5000/free5gc-udr
     pullPolicy: IfNotPresent
   service:
     type: ClusterIP
