--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -83,6 +83,8 @@ upf:
   imagePullSecrets: []
   podSecurityContext: {}
   securityContext:
+    runAsUser: 0 
+    runAsGroup: 0
     capabilities:
       add: ["NET_ADMIN"]
   resources:
