Change n6 IP address

--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -72,10 +72,10 @@ global:
     name: n6network
     type: ipvlan
     masterIf: enp0s3
-    subnetIP: 10.0.2.20
+    subnetIP: 10.0.2.0
     cidr: 24
     gatewayIP: 10.0.2.2
-    excludeIP: 10.0.2.254
+    excludeIP: 
   n9network:
     enabled: true
     name: n9network
