change ipvlan for macvlan on n2, n3, n4, n6, n9

--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -23,7 +23,7 @@ global:
   n4network:
     enabled: true
     name: n4network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.240
     cidr: 29
@@ -32,7 +32,7 @@ global:
   n3network:
     enabled: true
     name: n3network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
@@ -41,16 +41,16 @@ global:
   n6network:
     enabled: true
     name: n6network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s3
-    subnetIP: 10.0.2.0
+    subnetIP: 10.0.2.20
     cidr: 24
     gatewayIP: 10.0.2.2
-    excludeIP: 
+    excludeIP: 10.0.2.254
   n9network:
     enabled: true
     name: n9network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.224
     cidr: 29
@@ -76,7 +76,7 @@ upf:
   n4if:  # PFCP
     ipAddress: 10.100.50.241
   n6if:  # DN
-    ipAddress: 10.0.2.0
+    ipAddress: 10.0.2.20
 
   podAnnotations: {}
     # additional annotations
