--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -43,7 +43,7 @@ global:
   n2network:
     enabled: true
     name: n2network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.248
     cidr: 29
@@ -52,7 +52,7 @@ global:
   n3network:
     enabled: true
     name: n3network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
@@ -61,7 +61,7 @@ global:
   n4network:
     enabled: true
     name: n4network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.240
     cidr: 29
@@ -70,16 +70,16 @@ global:
   n6network:
     enabled: true
     name: n6network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s3
-    subnetIP: 10.0.2.0
+    subnetIP: 10.0.2.20
     cidr: 24
     gatewayIP: 10.0.2.2
-    excludeIP: 
+    excludeIP: 10.0.2.254
   n9network:
     enabled: true
     name: n9network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.224
     cidr: 29
