--- a/charts/ueransim/values.yaml
+++ b/charts/ueransim/values.yaml
@@ -19,7 +19,7 @@ global:
   n2network:
     enabled: true
     name: n2network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.248
     cidr: 29
@@ -28,7 +28,7 @@ global:
   n3network:
     enabled: true
     name: n3network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
