--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -52,7 +52,7 @@ global:
   n3network:
     enabled: true
     name: n3network
-    type: macvlan
+    type: ipvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
