--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -43,7 +43,7 @@ global:
   n2network:
     enabled: true
     name: n2network
-    type: macvlan
+    type: ipvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.248
     cidr: 29
@@ -61,7 +61,7 @@ global:
   n4network:
     enabled: true
     name: n4network
-    type: macvlan
+    type: ipvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.240
     cidr: 29
@@ -70,7 +70,7 @@ global:
   n6network:
     enabled: true
     name: n6network
-    type: macvlan
+    type: ipvlan
     masterIf: enp0s3
     subnetIP: 10.0.2.0
     cidr: 24
@@ -79,7 +79,7 @@ global:
   n9network:
     enabled: true
     name: n9network
-    type: macvlan
+    type: ipvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.224
     cidr: 29
