--- a/charts/ueransim/open5gs-values.yaml
+++ b/charts/ueransim/open5gs-values.yaml
@@ -14,7 +14,7 @@ global:
   #Global network parametes
   n2network:
     name: n2network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.248
     cidr: 29
