Revert "more changes. Pretty lost now."
This reverts commit cc23ee1c74fdc2a4cb0ee7f16f7a544c9bbe6874.

--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -52,7 +52,7 @@ global:
   n3network:
     enabled: true
     name: n3network
-    type: ipvlan
+    type: macvlan
     masterIf: enp0s8
     subnetIP: 10.100.50.232
     cidr: 29
