--- a/charts/ueransim/open5gs-values.yaml
+++ b/charts/ueransim/open5gs-values.yaml
@@ -15,15 +15,15 @@ global:
   n2network:
     name: n2network
     type: macvlan
-    masterIf: enp0s8
+    masterIf: eth0
     subnetIP: 10.100.50.248
     cidr: 29
     gatewayIP: 10.100.50.254
     excludeIP: 10.100.50.254
   n3network:
     name: n3network
-    type: ipvlan
-    masterIf: enp0s8
+    type: macvlan
+    masterIf: eth0
     subnetIP: 10.100.50.232
     cidr: 29
     gatewayIP: 10.100.50.238
