--- a/charts/free5gc/charts/free5gc-upf/values.yaml
+++ b/charts/free5gc/charts/free5gc-upf/values.yaml
@@ -17,7 +17,7 @@
 
 global:
   projectName: free5gc
-  userPlaneArchitecture: single  # possible values are "single" and "ulcl"
+  userPlaneArchitecture: ulcl  # possible values are "single" and "ulcl"
   uesubnet: 10.1.0.0/16
 #Global network parametes
   n4network:
@@ -141,7 +141,7 @@ upf1:
   n4if:  # PFCP
     ipAddress: 10.100.50.242
   n6if:  # DN
-    ipAddress: 10.100.100.13
+    ipAddress: 10.0.2.18
 
   podAnnotations: {}
     # additional annotations
@@ -205,7 +205,7 @@ upf2:
   n4if:  # PFCP
     ipAddress: 10.100.50.243
   n6if:  # DN
-    ipAddress: 10.100.100.14
+    ipAddress: 10.0.2.17
 
   podAnnotations: {}
     # additional annotations
@@ -271,7 +271,7 @@ upfb:
   n4if:  # PFCP
     ipAddress: 10.100.50.241
   n6if:  # DN
-    ipAddress: 10.100.100.12
+    ipAddress: 10.0.2.16
 
   podAnnotations: {}
     # additional annotations
