--- a/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
@@ -67,11 +67,13 @@ smf:
               - interfaceType: N3
                 endpoints:
                   - 10.100.50.233
-                networkInstance: internet
+                networkInstances:
+                  - internet # Data Network Name (DNN)
               - interfaceType: N9
                 endpoints:
                   - 10.100.50.225
-                networkInstance: internet
+                networkInstances:
+                  - internet # Data Network Name (DNN)
           AnchorUPF1:
             type: UPF
             nodeID: 10.100.50.242 # PFCP address
@@ -87,7 +89,8 @@ smf:
               - interfaceType: N9
                 endpoints:
                   - 10.100.50.226 # AnchorUPF1 N9 address
-                networkInstance: internet
+                networkInstances:
+                  - internet # Data Network Name (DNN)
           AnchorUPF2:
             type: UPF
             nodeID: 10.100.50.243 # PFCP address
@@ -103,7 +106,8 @@ smf:
               - interfaceType: N9
                 endpoints:
                   - 10.100.50.227 # AnchorUPF2 N9 address
-                networkInstance: internet
+                networkInstances:
+                  - internet # Data Network Name (DNN)
         links:
           - A: gNB1
             B: BranchingUPF
