--- a/charts/free5gc/charts/free5gc-amf/values.yaml
+++ b/charts/free5gc/charts/free5gc-amf/values.yaml
@@ -39,7 +39,7 @@ global:
         protocol: SCTP
         type: NodePort
   n2network:
-    enabled: false
+    enabled: true
     name: n2network
     type: macvlan
     masterIf: enp0s8
