--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -42,13 +42,13 @@ global:
   #Global network parametes
   n2network:
     enabled: false
-    name: n2network
-    type: macvlan
-    masterIf: enp0s8
-    subnetIP: 10.100.50.248
-    cidr: 29
-    gatewayIP: 10.100.50.254
-    excludeIP: 10.100.50.254
+#    name: n2network
+#    type: macvlan
+#    masterIf: enp0s8
+#    subnetIP: 10.100.50.248
+#    cidr: 29
+#    gatewayIP: 10.100.50.254
+#    excludeIP: 10.100.50.254
   n3network:
     enabled: true
     name: n3network
