--- a/charts/free5gc/values.yaml
+++ b/charts/free5gc/values.yaml
@@ -30,7 +30,7 @@ global:
       ipAddress: 10.100.50.249
     service:
       ngap:
-        enabled: false
+        enabled: true
         name: amf-n2
         port: 38412
         nodeport: 31412
@@ -41,14 +41,14 @@ global:
       ipAddress: 10.100.50.244
   #Global network parametes
   n2network:
-    enabled: true
-    name: n2network
-    type: macvlan
-    masterIf: enp0s8
-    subnetIP: 10.100.50.248
-    cidr: 29
-    gatewayIP: 10.100.50.254
-    excludeIP: 10.100.50.254
+    enabled: false
+#    name: n2network
+#    type: macvlan
+#    masterIf: enp0s8
+#    subnetIP: 10.100.50.248
+#    cidr: 29
+#    gatewayIP: 10.100.50.254
+#    excludeIP: 10.100.50.254
   n3network:
     enabled: true
     name: n3network
