--- a/charts/free5gc/charts/free5gc-smf/values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/values.yaml
@@ -201,7 +201,7 @@ smf:
           - A: BranchingUPF
             B: AnchorUPF1
         specificPath:
-          - dest: google.com # 8.8.8.8/32 the destination IP address on Data Network (DN)
+          - dest: 8.8.8.8/32 # the destination IP address on Data Network (DN)
             # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
             # The UPF's name should be consistent with smfcfg.yaml
             path: [BranchingUPF, AnchorUPF1]
