--- a/charts/free5gc/charts/free5gc-smf/values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/values.yaml
@@ -201,26 +201,28 @@ smf:
           - A: BranchingUPF
             B: AnchorUPF1
         specificPath:
-          - dest: 8.8.8.8/32 # the destination IP address on Data Network (DN)
+          - dest: 8.8.4.4/32 # the destination IP address on Data Network (DN)
             # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
             # The UPF's name should be consistent with smfcfg.yaml
             path: [BranchingUPF, AnchorUPF1]
-
-      UE2: # Group Name
-        members:
-        - imsi-208930000000004 # Subscription Permanent Identifier of the UE
-        topology: # Network topology for this group (Uplink: A->B, Downlink: B->A)
-        # default path derived from this topology
-        # node name should be consistent with smfcfg.yaml
-          - A: gNB1
-            B: BranchingUPF
-          - A: BranchingUPF
-            B: AnchorUPF2
-        specificPath:
-          - dest: 129.250.35.251/24 # the destination IP address on Data Network (DN)
-            # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
-            # The UPF's name should be consistent with smfcfg.yaml
+          - dest: 1.1.1.1/32
             path: [BranchingUPF, AnchorUPF2]
+
+#      UE2: # Group Name
+#        members:
+#        - imsi-208930000000004 # Subscription Permanent Identifier of the UE
+#        topology: # Network topology for this group (Uplink: A->B, Downlink: B->A)
+#        # default path derived from this topology
+#        # node name should be consistent with smfcfg.yaml
+#          - A: gNB1
+#            B: BranchingUPF
+#          - A: BranchingUPF
+#            B: AnchorUPF2
+#        specificPath:
+#          - dest: 129.250.35.251/32 # the destination IP address on Data Network (DN)
+#            # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
+#            # The UPF's name should be consistent with smfcfg.yaml
+#            path: [BranchingUPF, AnchorUPF2]
 
     logger: # log output setting
       enable: true # true or false
