--- a/charts/free5gc/charts/free5gc-smf/values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/values.yaml
@@ -156,18 +156,18 @@ smf:
                     dnnUpfInfoList: # DNN information list for this S-NSSAI
                       - dnn: internet
                         pools:
-                          - cidr: 10.1.0.0/17
+                          - cidr: 10.61.0.0/1
                         staticPools:
-                          - cidr: 10.1.64.0/24
-                  - sNssai: # S-NSSAI (Single Network Slice Selection Assistance Information)
-                      sst: 1 # Slice/Service Type (uinteger, range: 0~255)
-                      sd: 112233 # Slice Differentiator (3 bytes hex string, range: 000000~FFFFFF)
-                    dnnUpfInfoList: # DNN information list for this S-NSSAI
-                      - dnn: internet
-                        pools:
-                          - cidr: 10.1.128.0/17
-                        staticPools:
-                          - cidr: 10.1.192.0/24
+                          - cidr: 10.61.100.0/24
+#                  - sNssai: # S-NSSAI (Single Network Slice Selection Assistance Information)
+#                      sst: 1 # Slice/Service Type (uinteger, range: 0~255)
+#                      sd: 112233 # Slice Differentiator (3 bytes hex string, range: 000000~FFFFFF)
+#                    dnnUpfInfoList: # DNN information list for this S-NSSAI
+#                      - dnn: internet
+#                        pools:
+#                         - cidr: 10.1.128.0/17
+#                       staticPools:
+#                         - cidr: 10.1.192.0/24
             interfaces: # Interface list for this UPF
                   - interfaceType: N3 # the type of the interface (N3 or N9)
                     endpoints: # the IP address of this N3/N9 interface on this UPF
@@ -200,6 +200,8 @@ smf:
             B: BranchingUPF
           - A: BranchingUPF
             B: AnchorUPF1
+          - A: BranchingUPF
+            B: AnchorUPF2
         specificPath:
           - dest: 8.8.4.4/32 # the destination IP address on Data Network (DN)
             # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
