--- a/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
@@ -26,22 +26,22 @@ smf:
               dns: # the IP address of DNS
                 ipv4: 8.8.8.8
                 ipv6: 2001:4860:4860::8888
-        - sNssai:
-            sst: 1
-            sd: 112233
-          dnnInfos: # DNN information list
-            - dnn: internet # Data Network Name
-              dns: # the IP address of DNS
-                ipv4: 8.8.8.8
-                ipv6: 2001:4860:4860::8888
-        - sNssai:
-            sst: 2
-            sd: 112234    
-          dnnInfos:
-            - dnn: internet
-              dns: 
-                ipv4: 8.8.8.8
-                ipv6: 2001:4860:4860::8888
+#        - sNssai:
+#            sst: 1
+#            sd: 112233
+#          dnnInfos: # DNN information list
+#            - dnn: internet # Data Network Name
+#              dns: # the IP address of DNS
+#                ipv4: 8.8.8.8
+#                ipv6: 2001:4860:4860::8888
+#        - sNssai:
+#            sst: 2
+#            sd: 112234    
+#          dnnInfos:
+#            - dnn: internet
+#              dns: 
+#                ipv4: 8.8.8.8
+#                ipv6: 2001:4860:4860::8888
       plmnList: # the list of PLMN IDs that this SMF belongs to (optional, remove this key when unnecessary)
         - mcc: "208" # Mobile Country Code (3 digits string, digit: 0~9)
           mnc: "93" # Mobile Network Code (2 or 3 digits string, digit: 0~9)
