--- a/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
@@ -92,6 +92,8 @@ smf:
             B: AnchorUPF1
           - A: BranchingUPF
             B: AnchorUPF2
+          - A: BranchingUPF
+            B: BranchingUPF
       locality: area1 # Name of the location where a set of AMF, SMF and UPFs are located
       ulcl: true
 
