--- a/charts/free5gc/charts/free5gc-smf/values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/values.yaml
@@ -194,6 +194,10 @@ smf:
           - A: BranchingUPF
             B: AnchorUPF2
         specificPath:
+          - dest: 192.168.0.4/32 # the destination IP address on Data Network (DN)
+            # the order of UPF nodes in this path. We use the UPF's name to represent each UPF node.
+            # The UPF's name should be consistent with smfcfg.yaml
+            path: [BranchingUPF, AnchorUPF1]
           - dest: 172.23.23.222/32
             path: [BranchingUPF, AnchorUPF2]
           - dest: 9.9.9.9/32
