--- a/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
+++ b/charts/free5gc/charts/free5gc-smf/ulcl-enabled-values.yaml
@@ -59,11 +59,9 @@ smf:
             sNssaiUpfInfos:
               - sNssai:
                   sst: 1
-                  sd: 010203
-                dnnUpfInfoList:
-                  - dnn: internet
-                    pools:
-                    - cidr: 10.60.0.0/16
+                      - cidr: 10.60.0.0/16
+                    staticPools:
+                      - cidr: 10.60.100.0/24
             interfaces:
               - interfaceType: N9
                 endpoints:
